# linux-sysnet-prog

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: cmake-test.yml
.hooks/: check_coverage.sh
coverage/: coverage.info  coverage_filtered.info
coverage/html/: index-sort-f.html  index-sort-l.html  index.html
coverage/html/src/: fileio.c.func-sort-c.html  fileio.c.func.html  fileio.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html  main.c.func-sort-c.html  main.c.func.html  main.c.gcov.html
include/: fileio.h  main.h
notes/: COVERAGE.md  DEV_WORKFLOW.md  File_Essenstial.md
notes/Feature/: fileio.md
notes/apispec/: fileio.md
notes/testplan/: fileio.md
src/: CMakeLists.txt  fileio.c  main.c
test/: CMakeLists.txt  test_fileio.cpp  test_main.cpp
tlpi/: CMakeLists.txt  Makefile  test_file.txt
tlpi/ch04_file_io/: demo_logic.c  syscall_demo.c
tlpi/include/: demo_logic.h
tlpi/test/: CMakeLists.txt  test_demo.cpp
tlpi/test/mocks/: mock_syscalls.cpp  mock_syscalls.hpp
