cmake_minimum_required(VERSION 3.10)
project(LinuxSysNetProg C CXX)

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_compile_options(--coverage)
    link_libraries(gcov)
endif()
enable_testing()
add_subdirectory(src)
add_subdirectory(test)
include_directories(${CMAKE_SOURCE_DIR}/include)
